fix align middle

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,11 +118,6 @@
     font-size: 0.75rem;
 }
 
-.va_m
-{
-    vertical-align: middle;
-}
-
 /* #endregion utilities */
 
 /* #region app_header */
